------------
v3.0.0alpha4
------------




------------
v3.0.0alpha3
------------

|+

------------
v3.0.0alpha2
------------

|+

------------
v3.0.0alpha1
------------

[jan] Enforce MDC verification when decrypting PGP messages to mitigate EFAIL
      attacks (Immerda <admin@immerda.ch>).
|+


-------
v2.7.12
-------

[mjr] Fix detecting digest algo properly (Bug #14814).


-------
v2.7.11
-------

[jan] Improve S/MIME key details formatting.


-------
v2.7.10
-------

[jan] Correctly determine expiration dates of short living PGP keys.


------
v2.7.9
------

[jan] More fixes for GnuPG 2 (Mathieu Parent <math.parent@gmail.com>).
[jan] Remove dependency on openssl executable (Hadi Nategh
      <hnategh@gmail.com>).


------
v2.7.8
------

[jan] Detect unsupported GnuPG versions.
[jan] Fix detection of new GnuPG API (Remi Collet <remi@remirepo.net>, PR
      #220).


------
v2.7.7
------

[mjr] Correctly specify either sha-1 or sha-256 when signing a smime message.
[jan] Support GnuPG 2.1+ too (Bug #14014).


------
v2.7.6
------

[mjr] SECURITY: Fix remote code execution vulnerability (CVE-2017-7413, and
      CVE-2017-7414).


------
v2.7.5
------

[jan] Fix label for S/MIME Encrypted Key Usage attribute.


------
v2.7.4
------

[mjr] Ensure version information is output in ASCII armored output.
[jan] Fix parsing inline signed PGP messages with PHP 7+ (Bug #14352).


------
v2.7.3
------

[jan] Work around broken PGP key servers.


------
v2.7.2
------

[jan] Fix throwing exception if verifying a PGP signature failed.


------
v2.7.1
------

[jan] Update Greek translation (Limperis Antonis <limperis@cti.gr>).
[jan] Try three times to retrieve public PGP if the keyserver pool contains
      broken servers.


------
v2.7.0
------

[jan] Add Horde_Crypt_Pgp::pgpPacketInformationMultiple() and
      Horde_Crypt_Pgp_Backend_Binary::packetInfoMultiple() (Request #13190).
[jan] Fix retrieving PGP keys from the keyserver with certain HTTP client
      backends.